--- a/docs/presentation/package.json
+++ b/docs/presentation/package.json
@@ -31,7 +31,7 @@
     "snyk": "^1.362.1"
   },
   "devDependencies": {
-    "grunt": "~1.0.1",
+    "grunt": ">=1.3.0",
     "grunt-autoprefixer": "~3.0.3",
     "grunt-contrib-connect": "~0.11.2",
     "grunt-contrib-cssmin": "~0.14.0",
